# ChessGame

./: .gitignore  .gitmodules  CMakeLists.txt  ChessGame.sln
ChessGame/: Board.cpp  Board.h  ChessGame.cpp  ChessGame.vcxproj  ChessGame.vcxproj.filters  ChessGameGeneral.h  Piece.cpp  Piece.h  resource.h
ChessGame/Components/: BoardTileComponent.cpp  CameraStatsComponent.cpp  CameraZoomComponent.cpp  CameraZoomComponent.h  ChessBoardComponent.cpp  ChessPieceComponent.cpp  ChessPieceComponent.h  CollisionTestComponent.cpp  EngineStatsComponent.cpp  EngineStatsComponent.h  KeyboardMovementComponent.cpp  KeyboardMovementComponent.h
Game/: CMakeLists.txt  ChessGame.cpp  ChessGameGeneral.h
Game/Components/: BoardTileComponent.h  CameraStatsComponent.cpp  CameraStatsComponent.h  CameraZoomComponent.cpp  ChessBoardComponent.h  ChessPieceComponent.cpp  ChessPieceComponent.h  CollisionTestComponent.cpp  CollisionTestComponent.h  KeyboardMovementComponent.cpp
SimpleEngine/: CMakeLists.txt  Engine.cpp  Engine.h  EngineCore.cpp  EngineCore.h  EngineCoreTemplates.h  GameObject.cpp  GameObject.h  GameObjectComponent.cpp  GameObjectComponent.h  GameObjectTemplates.h  Logger.cpp  Logger.h  Object.h  Renderer.cpp  Renderer.h  SimpleEngine.vcxproj  SimpleEngine.vcxproj.filters  Transform.h  TransformComponent.cpp  TransformComponent.h  raymath.h
SimpleEngine/Collisions/: CollisionsDetector.cpp  CollisionsDetector.h
SimpleEngine/Components/: Camera2dComponent.cpp  Camera2dComponent.h  CollisionBaseComponent.cpp  CollisionBaseComponent.h  GameObjectComponent.cpp  GameObjectComponent.h  IReceiveCollisionUpdates.h  IRenderComponent.h  RectangleCollisionComponent.cpp  RectangleCollisionComponent.h  SpriteComponent.cpp  SpriteComponent.h  TagComponent.cpp  TagComponent.h  TransformComponent.cpp  TransformComponent.h  UIComponent.h
SimpleEngine/GameEntities/: GameComponent.cpp  GameComponent.h  GameComponentTemplates.h  GameEntity.cpp  GameEntity.h  GameEntityTemplates.h
SimpleEngine/Input/: Input.cpp  Input.h
SimpleEngine/Memory/: MemoryPool.cpp  MemoryPool.h  MemoryPoolTemplates.h
SimpleEngine/Utilities/: Backward.cpp  Backward.h  EngineTypeChecking.h  Format.h  String.cpp  String.h
